Fix font color for homepage banner on mobile

--- a/web/themes/custom/union_marketing/scss/components/_page-banner.scss
+++ b/web/themes/custom/union_marketing/scss/components/_page-banner.scss
@@ -364,3 +364,8 @@
     }
   }
 }
+
+// Quick homepage banner text color fix for mobile.
+.cu-banner--video .cu-heading {
+  --cu-text-color: white;
+}
